--- a/milestone-6(ES6 and API)/module-34(phone-hunter)/phone.html
+++ b/milestone-6(ES6 and API)/module-34(phone-hunter)/phone.html
@@ -21,7 +21,7 @@
 
     <title>Your Device</title>
   </head>
-  <body>
+  <body class="bg-slate-900">
     <header class="pt-12">
       <h1 class="text-4xl text-center font-bold text-green-500">Your Device</h1>
     </header>
@@ -72,7 +72,7 @@
         </div>
       </section>
       <!-----------------------------------------------deviceDetails-------------------------------- -->
-      <section class="deviceDetails-section" id="details-contaier">
+      <section class="deviceDetails-section bg-slate-800" id="details-contaier">
         <!-- The button to open modal -->
 
         <div></div>
