--- a/milestone-6(ES6 and API)/module-34(phone-hunter)/phone.html
+++ b/milestone-6(ES6 and API)/module-34(phone-hunter)/phone.html
@@ -21,7 +21,7 @@
 
     <title>Your Device</title>
   </head>
-  <body class="bg-slate-900">
+  <body class="bg-slate-900 py-24">
     <header class="pt-12">
       <h1 class="text-4xl text-center font-bold text-green-500">Your Device</h1>
     </header>
